Fix behavior on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,11 +346,23 @@ a.back-to-top {
   max-height: 216px;
 }
 
+.lfheader img.img-top {
+  width: 450px;
+}
+
 @media (max-width:750px) {
   .lfheader img{
     width:55%;
     padding-top:1.5%;
     padding-left:2%;
+  }
+
+  .lfheader img.img-top {
+    width: 250px;
+  }
+
+  .lfheader li.nav-item {
+    width: 100%;
   }
 
   .copyright {
@@ -542,14 +554,16 @@ a.back-to-top {
   color: #24a148;
 }
 
-div.row div.column-1, div.row div.column-2 {
-  border-style: dashed;
-  border-width: 0px 1px 1px 0px;
-}
+@media (min-width:750px) {
+  div.row div.column-1, div.row div.column-2 {
+    border-style: dashed;
+    border-width: 0px 1px 1px 0px;
+  }
 
-div.row div.column-3 {
-  border-style: dashed;
-  border-width: 0px 0px 1px 0px;
+  div.row div.column-3 {
+    border-style: dashed;
+    border-width: 0px 0px 1px 0px;
+  }
 }
 
 span.long-term-support {
@@ -592,4 +606,10 @@ span.extension {
   border-radius: 22px;
   color: white;
   padding: 6px;
+}
+
+.lfheader button.navbar-toggler {
+  position: absolute;
+  top: 20px;
+  right: 10px;
 }
